Refactor `GetFacetStatsResult` to group stats by name and return a map; update related tests in `ContentTest` and `SightingTest` to support this structure.